# ai-engineering-lab

./: .gitignore  LICENSE  README.md
retail_sql_agent/: .env  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  main.py  pyproject.toml  sessions.json  test_sql.py
retail_sql_agent/.claude/skills/business-intelligence/: SKILL.md
retail_sql_agent/.claude/skills/data-exporter/: SKILL.md
retail_sql_agent/.claude/skills/forecasting-and-inventory/: SKILL.md
retail_sql_agent/.claude/skills/retail-insights/: SKILL.md
retail_sql_agent/agent/: retail_agent.py
retail_sql_agent/core/: database_manager.py  session_manager.py
retail_sql_agent/static/: index.html  style.css
retail_sql_agent/tests/: test_agent_sdk.py  test_extended_db.py  test_sql.py
retail_sql_agent/tools/: database_tools.py  export_tools.py
sql-agent/: pyproject.toml
sql_agent/: .gitignore  README.md  config.py  main.py  pyproject.toml  test_sql.py
sql_agent/.claude/skills/data-exporter/: SKILL.md
sql_agent/.claude/skills/data-quality/: SKILL.md
sql_agent/.claude/skills/sql-analyst/: SKILL.md
sql_agent/agent/: claude_agent.py  skills_agent.py
sql_agent/core/: config.py  data_base_manager.py
sql_agent/static/: index.html  style.css
sql_agent/tools/: export_tool.py  quality_tool.py  sql_tool.py
support_ticket_classification_system/: README.md  main.py  pyproject.toml  requirements.txt
support_ticket_classification_system/core/: config.py
support_ticket_classification_system/graph/: graph.py  guardrails.py  middleware.py  state.py
support_ticket_classification_system/prompts/: prompt_registry.py
support_ticket_classification_system/schemas/: ticket_schema.py
support_ticket_classification_system/services/: llm_provider.py  validation.py
support_ticket_classification_system/static/: index.html
support_ticket_classification_system/tests/: run_tests.py  test_cases.py
