[project]
name = "sql-agent"
version = "0.1.0"
description = "An AI-powered SQL data analyst agent built with Claude and the Anthropic Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.48",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.48",
    "pymysql>=1.1.2",
    "psycopg2-binary>=2.9.11",
]

[project.scripts]
sql-agent = "main:main"
